--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "~3.2.0",
     "underscore": "~1.7.0",
     "async": "~0.9.0",
-    "mssql": "~1.3.0"
+    "mssql": "~1.3.0",
+    "underscore.string":"~2.4.0"
   }
 }
