--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mssql": "~1.3.0",
     "underscore.string":"~2.4.0",
     "passport":"~0.2.1",
-    "passport-local":"~1.0.0"
+    "passport-local":"~1.0.0",
+    "express-session":"~1.9.1"
   }
 }
