--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "underscore.string":"~2.4.0",
     "passport":"~0.2.1",
     "passport-local":"~1.0.0",
-    "express-session":"~1.9.1"
+    "express-session":"~1.9.1",
+    "mkdirp":"~0.5.0"
   }
 }
